[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_ready_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_ready_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_pointing_gun_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_smooshed_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_smooshed_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_headshot_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_headshot_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scenes/Enemies/PistolMan.gd" type="Script" id=8]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_pointing_gun_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/splatter_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/splatter_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_pointing_gun_w_spike_hat_2.png" type="Texture" id=12]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_pointing_gun_w_spike_hat_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_spike_hat_ready_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/pistol_man_spike_hat_ready_1.png" type="Texture" id=15]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/splatter_3.png" type="Texture" id=16]
[ext_resource path="res://Assets/GFX/Enemies/pistol_man/splatter_4.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "ready_w_spike_hat",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "pointing_gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "pointing_gun_w_spike_hat",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "smooshed",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "headshot",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 10.0
step = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disapear"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "unlock_top_collision"
length = 0.5

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.1689, 9.13098 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.06689, 3.22593 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "splatter",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.52875, 3.23911 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 19.1589 )

[node name="PistolMan" type="KinematicBody2D"]
position = Vector2( 520, 306 )
collision_layer = 144
collision_mask = 2
script = ExtResource( 8 )

[node name="ChildNode" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="ChildNode"]
z_index = -1
frames = SubResource( 1 )
animation = "ready"
frame = 1
speed_scale = 0.5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChildNode"]
anims/die = SubResource( 2 )
anims/unlock_top_collision = SubResource( 3 )

[node name="Sides" type="Area2D" parent="ChildNode"]
position = Vector2( 0.750015, 0.249996 )
scale = Vector2( 1, 0.992126 )
collision_layer = 16

[node name="SIdesCollisionShape" type="CollisionShape2D" parent="ChildNode/Sides"]
visible = false
position = Vector2( 16.744, 7.24999 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Top" type="Area2D" parent="ChildNode"]
collision_layer = 16

[node name="TopCollisionShape" type="CollisionShape2D" parent="ChildNode/Top"]
visible = false
position = Vector2( 16.0581, -13.6008 )
shape = SubResource( 5 )

[node name="Head" type="Node2D" parent="ChildNode"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="ChildNode/Head"]
position = Vector2( 15.5563, -5.03815 )
frames = SubResource( 6 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -33.3376, -3.77515 )
enabled = true
cast_to = Vector2( -240, 0 )

[node name="HatSpikes" type="Area2D" parent="."]
position = Vector2( 16.0867, -19.5616 )
collision_layer = 4

[node name="HatSpikeCollisionShape" type="CollisionShape2D" parent="HatSpikes"]
visible = false
position = Vector2( -0.176777, -1.19087 )
shape = SubResource( 7 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 17.6036, 4.91425 )
shape = SubResource( 8 )

[node name="SoundEffects2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="ChildNode/Sides" to="." method="_on_Sides_body_entered"]
[connection signal="body_entered" from="ChildNode/Top" to="." method="_on_Top_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HatSpikes" to="." method="_on_HatSpikes_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
